# shorter

./: auth.py  db.py  encoder.py  main.py  models.py  pyproject.toml  settings.py
auth/: __init__.py  exceptions.py  hashing.py  router.py
